//
//
// db3_bill.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
import "db3_base.proto";
package db3_bill_proto;

enum BillType {
    BillForMutation = 0;
    BillForQuery = 1;
}

message Bill {
    db3_base_proto.Units gas_fee = 1;
    uint64 block_height = 2;
    // query session or mutation
    BillType bill_type = 4;
    // time on block created
    uint64 time = 5;
    // mutation id or query session id
    bytes tx_id = 6;
    // owner address
    bytes owner = 8;
    // to address
    bytes to = 9;
}

message BillQueryRequest {
    uint64 block_height = 1;
}
