//
// db3_faucet.proto
// Copyright (C) 2023 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//


syntax = "proto3";

package db3_faucet_proto;

message FaucetRecord {
    bytes addr = 1;
    uint32 ts = 2;
    uint64 amount = 3;
}

message FaucetRequest {
    bytes hash = 1;
    bytes signature = 2;
}

message FaucetResponse {
    int32 code = 1;
    string msg = 2;
}

message GetFaucetStateRequest {}
message FaucetState {
    uint64 total_amount = 1;
    uint64 total_address = 2;
}

service FaucetNode {
    rpc Faucet(FaucetRequest) returns (FaucetResponse){}
    rpc GetFaucetState(GetFaucetStateRequest) returns(FaucetState){}
}
