//
// db3_message.proto
// Copyright (C) 2023 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";
package db3_message_proto;

message DepositEvent {
    // the evm chain id
    uint32 chain_id = 1;
    // the evm chain user address
    bytes sender = 2;
    // the deposit amount 
    uint64 amount = 3;
    // the block id of evm chain
    uint64 block_id = 4;
    // the transacion id
    bytes transaction_id = 5;
    // the signature of transacion
    bytes signature = 6;
    bytes tx_signed_hash = 7;
}
