//
// db3_storage.proto
// Copyright (C) 2023 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";

package db3_storage_proto;

message SendMutationRequest {
    // the signature of payload
    bytes signature = 1;
    // the payload of mutation
    bytes payload = 2;
}

message SendMutationResponse {
    // a hex format id
    string id = 1;
    int32 code = 2;
    string msg = 3;
}

message GetNonceRequest {
    // a hex format address
    string address = 1;
}

message GetNonceResponse {
    uint64 nonce = 2;
}


service StorageNode {
    rpc SendMutation(SendMutationRequest) returns (SendMutationResponse) {}
    //rpc GetNonce(GetNonceRequest) returns (GetNonceResponse) {}
}
